--- a/templates/global/partials/header.html
+++ b/templates/global/partials/header.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(página atual)</span></a>
+          <a class="nav-link" href="/">Home <span class="sr-only">(página atual)</span></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -18,8 +18,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="/client/register">Novo</a>
-            <a class="dropdown-item" href="#">Consultar</a>
-            <a class="dropdown-item" href="#">Editar</a>
+            <a class="dropdown-item" href="/client/">Consultar</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -28,7 +27,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/budget/new_budget/">Gerar</a>
-              <a class="dropdown-item" href="budget/search_budget/">Consultar</a>
+              <a class="dropdown-item" href="/budget/search_budget/">Consultar</a>
               <a class="dropdown-item" href="#">Editar</a>
             </div>
           </li>
